# zero2prod

./: Cargo.toml  Dockerfile  configuration.toml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-bcc2ac4388e43aff5df41095e4eda3fc4d000136baf06e82e3cf99164f041e40.json
configuration/: base.toml  local.toml  production.toml
migrations/: 20240317154006_create_subscriptions_table.sql
scripts/: connect_db.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
